--- a/src/index.css
+++ b/src/index.css
@@ -11,18 +11,17 @@
 }
 
 ::-webkit-scrollbar {
-  height: 0;
+  height: 5px;
   width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #55555520;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
-
 }
 
 /* Handle on hover */
